# MediaDrivePro

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  config.toml  docker-compose.yml
.github/workflows/: docker.yml
crates/api/: Cargo.toml
crates/api/src/: admin.rs  auth.rs  files.rs  folders.rs  images.rs  lib.rs  media.rs  room_manager.rs  rooms.rs  shares.rs  state.rs  stream.rs  tokens.rs  transcode.rs
crates/auth/: Cargo.toml
crates/auth/src/: jwt.rs  middleware.rs  password.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  response.rs
crates/core/: Cargo.toml
crates/core/src/: api_token.rs  file.rs  folder.rs  image.rs  lib.rs  media.rs  multipart_upload.rs  room.rs  share.rs  transcode.rs  user.rs
crates/core/src/entity/: api_tokens.rs  files.rs  folders.rs  images.rs  media_info.rs  mod.rs  room_members.rs  rooms.rs  shares.rs  transcode_tasks.rs  users.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  operator.rs
crates/webdav/: Cargo.toml
crates/webdav/src/: auth.rs  filesystem.rs  lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250305_000001_create_users_table.rs  m20250305_000002_create_folders_table.rs  m20250305_000003_create_files_table.rs  m20250305_000004_create_shares_table.rs  m20250306_000005_create_api_tokens_table.rs  m20250307_000006_add_avatar_to_users.rs  m20250307_000007_create_images_table.rs  m20250307_000008_create_transcode_tasks_table.rs  m20250307_000009_create_media_info_table.rs  m20250307_000010_create_rooms_table.rs  m20250307_000011_create_room_members_table.rs
src/: main.rs
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: admin.ts  auth.ts  client.ts  files.ts  folders.ts  images.ts  media.ts  rooms.ts  shares.ts  tokens.ts  transcode.ts
web/src/components/: Avatar.tsx  Breadcrumb.tsx  ChatPanel.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CreateFolderModal.tsx  DanmakuOverlay.tsx  FileList.tsx  FileRow.tsx  FolderRow.tsx  Layout.tsx  MoveModal.tsx  Pagination.tsx  PreviewModal.tsx  ProtectedRoute.tsx  RenameModal.tsx  RoomPlayer.tsx  ShareModal.tsx  StorageBar.tsx  UploadZone.tsx  VideoPlayer.tsx  menuItems.tsx
web/src/hooks/: useRoomSocket.ts
web/src/lib/: clipboard.ts  format.ts  mime.ts
web/src/pages/: AdminPage.tsx  FileBrowserPage.tsx  ImagesPage.tsx  LoginPage.tsx  PublicSharePage.tsx  RegisterPage.tsx  RoomsPage.tsx  SettingsPage.tsx  SharesPage.tsx  TokensPage.tsx  WatchRoomPage.tsx
web/src/store/: auth.ts
