[workspace]
members = ["migration", "crates/*"]
resolver = "2"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
] }
sea-orm-migration = { version = "1" }

# Storage
opendal = { version = "0.51", features = ["services-fs", "services-s3"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
futures = "0.3"

# Internal crates
mdp-common = { path = "crates/common" }
mdp-auth = { path = "crates/auth" }
mdp-storage = { path = "crates/storage" }
mdp-core = { path = "crates/core" }
mdp-api = { path = "crates/api" }
migration = { path = "migration" }

[package]
name = "mediadrive-pro"
version = "0.1.0"
edition = "2021"

[dependencies]
mdp-common.workspace = true
mdp-api.workspace = true
mdp-storage.workspace = true
migration.workspace = true
axum.workspace = true
sea-orm.workspace = true
sea-orm-migration = { workspace = true, features = ["runtime-tokio-rustls"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
