[package]
name = "mdp-api"
version = "0.1.0"
edition = "2021"

[dependencies]
mdp-common.workspace = true
mdp-auth.workspace = true
mdp-core.workspace = true
mdp-storage.workspace = true
axum.workspace = true
sea-orm.workspace = true
opendal.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tower-http.workspace = true
tracing.workspace = true
