[package]
name = "mdp-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
mdp-common.workspace = true
mdp-auth.workspace = true
mdp-core.workspace = true
mdp-storage.workspace = true
axum.workspace = true
sea-orm.workspace = true
opendal.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tower-http.workspace = true
tracing.workspace = true
dashmap.workspace = true
sha2.workspace = true
hex.workspace = true
