[package]
name = "mdp-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
mdp-common.workspace = true
axum.workspace = true
axum-extra.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
