[package]
name = "mdp-auth"
version = "0.1.0"
edition.workspace = true

[dependencies]
mdp-common.workspace = true
axum.workspace = true
axum-extra.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
sea-orm.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
urlencoding = "2"
