[package]
name = "mdp-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sea-orm.workspace = true
opendal.workspace = true
