[package]
name = "mdp-webdav"
version = "0.1.0"
edition.workspace = true

[dependencies]
mdp-common.workspace = true
mdp-core.workspace = true
mdp-storage.workspace = true
dav-server.workspace = true
sea-orm.workspace = true
opendal.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
bytes.workspace = true
futures.workspace = true
http-body-util.workspace = true
headers.workspace = true
axum.workspace = true
tokio = { workspace = true }
